fixed SP registry card button UI

--- a/templates/accounts/registry.html
+++ b/templates/accounts/registry.html
@@ -4,15 +4,13 @@
 
     <div class="content-card-v2 content-card-space">
 
-        <div>
-            <h2 class="mb-0">The Local Contexts Registry</h2><br>
-            <p class="mt-0 w-80">
-                This is the registry for accounts that are registered with the Local Contexts Hub. Visit an account's public page to contact or request to join, and to view public projects, 
-                Open to Collaborate Notices, and Labels in use. <br><br>
-
-                After you register on the Hub, you can request to join accounts for communities and institutions that you are already affiliated with. 
-                <strong>If you wish to collaborate with a community or institution you are not affiliated with, you will connect with them through Projects. </strong>
-                You do not need to join their account.
+        <div class="w-80">
+            <h2 class="mb-0">The Local Contexts Registry</h2>
+            <p>
+                This is the registry for accounts that are registered with the Local Contexts Hub. Visit an account's public page to contact or request to join, and to view public projects, Open to Collaborate Notices, and Labels in use.
+            </p>
+            <p>
+                After you register on the Hub, you can request to join accounts for communities and institutions that you are already affiliated with. <strong>If you wish to collaborate with a community or institution you are not affiliated with, you will connect with them through Projects.</strong> You do not need to join their account.
             </p>
         </div>
 
@@ -27,34 +25,34 @@
             </div>
             <div class="flex-this align-center ml-16">
                 <p>
-                    Browse: 
-                    <a 
-                        href="{% url 'registry' %}" 
+                    Browse:
+                    <a
+                        href="{% url 'registry' %}"
                         class="{% if filtertype is None %} bold {% endif %}darkteal-text pointer underline-hover"
                     >All ({% all_account_count %})
                     </a> |
-                    <a 
-                        href="{% url 'registry' filtertype='communities' %}" 
+                    <a
+                        href="{% url 'registry' filtertype='communities' %}"
                         class="{% if '/communities/' in request.path %} bold {% endif %}darkteal-text pointer underline-hover"
                     >Communities ({% community_count %})
                     </a> |
-                    <a 
-                        href="{% url 'registry' filtertype='institutions' %}" 
+                    <a
+                        href="{% url 'registry' filtertype='institutions' %}"
                         class="{% if '/institutions/' in request.path %} bold {% endif %}darkteal-text pointer underline-hover"
                     >Institutions ({% institution_count %})
-                    </a> |        
-                    <a 
-                        href="{% url 'registry' filtertype='researchers' %}" 
+                    </a> |
+                    <a
+                        href="{% url 'registry' filtertype='researchers' %}"
                         class="{% if '/researchers/' in request.path %} bold {% endif %}darkteal-text pointer underline-hover"
                     >Researchers ({% researcher_count %})
-                    </a> |     
-                    <a 
-                        href="{% url 'registry' filtertype='otc' %}" 
+                    </a> |
+                    <a
+                        href="{% url 'registry' filtertype='otc' %}"
                         class="{% if '/otc/' in request.path %} bold {% endif %}darkteal-text pointer underline-hover"
                     >Open To Collaborate ({% otc_registry_count %})
-                    </a>   
-                </p>            
-            </div>            
+                    </a>
+                </p>
+            </div>
         </div>
 
         {% include 'partials/_alerts.html' %}
@@ -76,7 +74,7 @@
     {% if not items %}
         <div class="dashcard w-100 center-text mt-16 mb-16">
             <h2>There are no public accounts by that name.</h2>
-        </div>  
+        </div>
     {% endif %}
 
     {% include 'snippets/pagination.html' %}
