--- a/templates/partials/infocards/_service-provider-card.html
+++ b/templates/partials/infocards/_service-provider-card.html
@@ -1,44 +1,48 @@
 {% load static %}
 <div class="dashcard">
-    <div class="flex-this">
-        <div class="dashcard-img-container">
-            <img loading="lazy" 
-                class="profile-img" 
-                src="{% if service_provider.image %} {{ service_provider.image.url }} {% else %} {% static 'images/placeholders/service-provider-place.jpg' %}{% endif %}" 
-                alt="{{ service_provider.name }} image"
-            >
-            {% if service_provider and service_provider.is_certified %}
-                <div class="certified-overlay">
-                    <img 
-                        src="{% static 'images/logos/sp-badge-orange.png' %}"
-                        width="157px"
-                        height="47px"
-                    >
-                </div>
-            {% endif %}
-        </div>
-        <div class="flex-this column dashcard-text-container">
-            <h3 class="dashcard-h3 darkteal-text">{{ service_provider }}</h3>
-            <div>
-                <p class="dashcard-subheader">
-                    Service Provider
+    <div class="flex-this space-between">
+        <div class="flex-this">
+
+            <!-- Image -->
+            <div class="dashcard-img-container">
+                <img loading="lazy"
+                    class="profile-img"
+                    src="{% if service_provider.image %} {{ service_provider.image.url }} {% else %} {% static 'images/placeholders/service-provider-place.jpg' %}{% endif %}"
+                    alt="{{ service_provider.name }} image"
+                >
+                {% if service_provider and service_provider.is_certified %}
+                    <div class="certified-overlay">
+                        <img
+                            src="{% static 'images/logos/sp-badge-orange.png' %}"
+                            width="157px"
+                            height="47px"
+                        >
+                    </div>
+                {% endif %}
+            </div>
+
+            <!-- Account Information -->
+            <div class="flex-this column dashcard-text-container">
+                <h3 class="dashcard-h3 darkteal-text">{{ service_provider }}</h3>
+                <p class="dashcard-subheader">Service Provider</p>
+                <p class="dashcard-description description-sm">
+                    {% if service_provider.description %}{{ service_provider.description }} {% else %} No description provided. {% endif %}
                 </p>
             </div>
-            <div><p class="dashcard-description description-sm">
-                {% if service_provider.description %}{{ service_provider.description }} {% else %} No description provided. {% endif %}
-            </p></div>
+
         </div>
 
+        <!-- Button and OTC Notice -->
         <div class="dashcard-btn-container">
-
             <div class="flex-this gap-half">
+
                 {% if '/registry/' in request.path %}
                     <div>
-                        <div class="mr-16">
-                            <a 
+                        <div class="mb-16">
+                            <a
                                 class="primary-btn action-btn"
-                                href="{% url 'public-service-provider' service_provider.id %}"                    
-                            >View public page</a>                        
+                                href="{% url 'public-service-provider' service_provider.id %}"
+                            >View public page</a>
                         </div>
                         {% if service_provider.otc_service_provider_url.all %}
                             <div class="flex-this flex-end">
@@ -47,18 +51,19 @@
                         {% endif %}
                     </div>
                 {% endif %}
-                <div>
-                    {% if '/dashboard/' in request.path %}
-                        <a 
+
+                {% if '/dashboard/' in request.path %}
+                    <div>
+                        <a
                             class="primary-btn action-btn"
                             href="{% url 'service-provider-notices' service_provider.id %}"
                         >View account</a>
-                    {% endif %}
-                </div>
-                {% if '/dashboard/' in request.path %}
+                    </div>
+
                     <div class="ml-8 flex-this gap-half">
                         <!-- Notification -->
                         {% include 'snippets/notifications.html' with scope=service_provider %}
+
                         <!-- Settings -->
                         {% if request.user == service_provider.account_creator %}
                             <div>
@@ -67,8 +72,8 @@
                         {% endif %}
                     </div>
                 {% endif %}
-            </div>
 
+            </div>
         </div>
 
     </div>
