feat: added project content when user is a community

--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -298,6 +298,8 @@
                     A Project boundary represents the spatial area where a Project is located or originated from.
                     By adding a Project boundary, you can connect this material with communities on the Hub who
                     have added a community boundary.
+                {% elif community %}
+                    A Project boundary represents the spatial area where a Project is located or originated from.
                 {% endif %}
             </div>
 
