feat: created tooltip for NLD section

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -149,7 +149,18 @@
 </style>
 <span class="boundary-selection-unit">
     <div class="region-container">
-        <label class="pad-top-1-5">Search the Native Land Digital database</label><br>
+        <label class="pad-top-1-5">Search the Native Land Digital database</label>
+        <div class="tooltip"><strong>?</strong>
+            <span class="tooltiptext">
+                Native Land Digital is an Indigenous-led mapping tool that maps Indigenous territories, treaties,
+                and languages around the world.
+                <a href="https://native-land.ca/" class="white-text bold underline-hover" target="_blank" rel="noopener">
+                    See more information here.
+                    <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
+                </a>
+            </span>
+        </div>
+        <br>
         <div class="community-boundary-search">
             <input class="input-field search" type="text"
                    placeholder="Search by address, community name or town"
