feat: created tooltip for shapefile section

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -172,7 +172,14 @@
         </div>
     </div>
     <div class="browse-files-container">
-                <label class="pad-top-1-5">Upload shapefile (. zip)</label><br>
+                <label class="pad-top-1-5">Upload shapefile (. zip)</label>
+                <div class="tooltip"><strong>?</strong>
+                    <span class="tooltiptext">
+                        A shapefile is a vector data file format commonly used for geospatial analysis.
+                        You can create shapefiles on third-party websites like ArcGIS and QGIS.
+                    </span>
+                </div>
+                <br>
                 <div class="community-boundary-upload">
                     <input type="text"
                            class="input-field select-file-input"
