feat: modified css

--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -146,6 +146,10 @@
     .disabled-btn{
         pointer-events: none;
     }
+
+    .tooltip {
+        z-index: 2;
+    }
 </style>
 <span class="boundary-selection-unit">
     <div class="region-container">
@@ -154,6 +158,7 @@
             <span class="tooltiptext">
                 Native Land Digital is an Indigenous-led mapping tool that maps Indigenous territories, treaties,
                 and languages around the world.
+                <br>
                 <a href="https://native-land.ca/" class="white-text bold underline-hover" target="_blank" rel="noopener">
                     See more information here.
                     <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
