feat: updated content based on feedback

--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -14,8 +14,8 @@
                     <a href="mailto:support@localcontexts.org" class="default-a">support@localcontexts.org</a>
                     for deactivation assistance.
                 {% elif user_role == 'is_member' %}
-                    It looks like you are a member of an account. When you deactivate your profile,
-                    you will be removed from all accounts and unable to log in.
+                    It looks like you are a member of an account.
+                    When you deactivate your profile, you will be removed from all accounts and unable to log in.
                     Your profile and its associated data will be deleted 30 days after deactivation.
                 {% else %}
                     You will not be able to log in after you deactivate your profile.
