fixed sp ui for count cards to match rest of the account types

--- a/templates/partials/infocards/_service-provider-dashcard.html
+++ b/templates/partials/infocards/_service-provider-dashcard.html
@@ -62,13 +62,15 @@
                 </div>
 
                 <!-- Count cards -->
-                <div class="flex-this column stats-card-container">
+                <div class="flex-this column stats-card-container bold mr-0">
 
+                    <!-- Count of OTC Notices Service Provider has added -->
                     <div class="stats-card flex-this flex-start">
                         <div><p>00</p></div>
                         <div class="ml-16"><span>Notices</span></div>
                     </div>
 
+                    <!-- Count of accounts connected to the Service Provider -->
                     <div class="stats-card flex-this flex-start">
                         <div>
                             <p>
@@ -79,6 +81,7 @@
                         <div class="ml-16"><span>Connections</span></div>
                     </div>
 
+                    <!-- Count of members added to Service Provider account -->
                     <div class="stats-card flex-this flex-start">
                         <div>
                             <p>
