Updated subscription page

--- a/templates/account_settings_pages/_subscription.html
+++ b/templates/account_settings_pages/_subscription.html
@@ -2,12 +2,12 @@
 
 {% block account_settings %}
   <div class="flex-this space-between">
-    <div><h3 class="no-top-margin">Subscription</h3></div>
+    <div><h3 class="mt-0">Subscription</h3></div>
   </div>
-  <p class="no-top-margin {% if subscription is None %} red-text {% endif %}">Subscriptions enable any museum, repository, university, or other organizations to work collaboratively with Indigenous communities on the Local Contexts Hub. <a class="default-a" href="https://localcontexts.org/members-subscribers-and-service-providers/" target="_blank"> Read more about subscriptions </a>.</p>
+  <p class="mt-0 {% if subscription is None %} red-text {% endif %}">Subscriptions enable any museum, repository, university, or other organizations to work collaboratively with Indigenous communities on the Local Contexts Hub. <a class="default-a" href="https://localcontexts.org/members-subscribers-and-service-providers/" target="_blank"> Read more about subscriptions </a>.</p>
   {% if subscription is not None %}
   <div class="flex-this space-between">
-    <div><h4 class="no-bottom-margin no-top-margin">Subscription Details</h4></div>
+    <div><h4 class="mb-0 mt-0">Subscription Details</h4></div>
   </div>
   {% endif %}
   {% if renew %}
@@ -21,37 +21,25 @@
     <button type="submit" class="primary-btn action-btn" name="generatebtn">Fill out Subscription Form</button>
   </div> 
   {% else %}
-    <div class="flex-this w-50 subscription-details">
-      <div><h6>Entity Type</h6> <p><small>Large Organization <span class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
+    <div class="flex-this w-60 subscription-details">
+      {% comment %} <div><h6>Entity Type</h6> <p><small>Large Organization <span class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
         <span class="tooltiptext">
             Your institution is Large Organization.
         </span>
-      </span> </small></p></div>
-      <div class="vl pad-left-2"><h6>Start Date</h6> <p><small>{{ start_date }}</small></p></div>
-      <div class="vl pad-left-2"><h6 class="margin-left-8">End Date</h6> <p class="margin-left-8"><small>{{ end_date }}</small></p></div>
+      </span> </small></p></div> {% endcomment %}
+      <div class="pad-left-2"><h6>Start Date</h6> <p><small>{{ start_date }}</small></p></div>
+      <div class="vl pad-left-2"><h6 class="ml-8 ">End Date</h6> <p class="ml-8 "><small>{{ end_date }}</small></p></div>
     </div>
     <div class="flex-this space-between">
-      <div><h4 class="no-bottom-margin">Subscription Activity</h4></div>
+      <div><h4 class="mb-0">Subscription Activity</h4></div>
     </div>
-    <p class="no-top-margin"><small>See an overview of the activities happening within your subscription</small></p>
-    <div class="flex-this subscription-activity subscription-details w-70 margin-5">
+    <p class="mt-0"><small>See an overview of the activities happening within your subscription</small></p>
+    <div class="flex-this subscription-activity subscription-details w-70">
       <div><h6>Users Added</h6> <p><small>{% if subscription.users_count != -1 %}{{ subscription.users_count }}{% else %}Unlimited{% endif %}</small></p></div>
       <div class="vl"><h6>Projects Created</h6> <p><small>{% if subscription.project_count != -1 %}{{ subscription.project_count }}{% else %}Unlimited{% endif %}</small></p></div>
       <div class="vl"><h6>Notifications Sent</h6> <p><small>{% if subscription.notification_count != -1 %}{{ subscription.notification_count }}{% else %}Unlimited{% endif %}</small></p></div>
       <div class="vl"><h6>Notices and Labels</h6> <p><small>Unlimited</small></p></div>
       <div class="vl"><h6>API Keys</h6> <p><small>{% if subscription.api_key_count != -1 %}{{ subscription.api_key_count }}{% else %}Unlimited{% endif %}</small></p></div>
-    </div>
-    <div class="flex-this space-between">
-      <div><h4 class="no-bottom-margin">Edit Subscription</h4></div>
-    </div>
-    <p class="no-top-margin"><small>Manage and edit your subscription plan</small></p>
-    <div class="flex-this">
-      <div>
-          <button type="submit" class="primary-btn action-btn" name="generatebtn">Update Subscription</button>
-      </div>        
-      <div class="margin-left-1">
-        <button type="submit" class="primary-btn white-btn" name="generatebtn">Cancel Subscription</button>
-      </div>                
     </div>
     <p><small>Need help? Please contact us at  <a href="mailto:support@localcontexts.org" class="default-a">support@localcontexts.org</a></small></p>
   {% endif %}
