--- a/templates/account-settings-base.html
+++ b/templates/account-settings-base.html
@@ -118,10 +118,10 @@
                 
                 {% if institution and envi != "SANDBOX" %}
                 <a class="side-nav-a" href="{% if institution %}{% url 'subscription' institution.id 'institution' %}{% else %}{% url 'subscription' researcher.id 'researcher' %}{% endif %}">
-                        <div class="side-nav-item {% if 'subscription' in request.path %} selected {% else %} grey-text {% endif %}">
+                        <div class="flex-this  side-nav-item {% if 'subscription' in request.path %} selected {% else %} grey-text {% endif %}">
                             <div class="w-20 margin-right-8"><i class="fa fa-calendar-check-o fa-3x" aria-hidden="true"></i></div>
                             <div class="w-80">
-                                <p class="no-top-margin"><strong>Subscription</strong><br>Subscription details, subscription activity</p>
+                                <p class="mt-0"><strong>Subscription</strong><br>Subscription details, subscription activity</p>
                             </div>
                         </div>
                     </a>
